Исправления после ревью ТЗ 5ого спринта